--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -34,6 +34,8 @@ jobs:
             repo: docker.io
           - image: ubuntu
             repo: docker.io
+          - image: kindest/node
+            repo: docker.io
     permissions:
       packages: write
     steps:
