Add nginx ingress

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -38,6 +38,11 @@ jobs:
             repo: docker.io
           - image: centrifugo/centrifugo
             repo: docker.io
+          - image: ingress-nginx/kube-webhook-certgen
+            repo: k8s.io
+          - image: ingress-nginx/controller
+            repo: k8s.io
+
     permissions:
       packages: write
     steps:
