Add postgres image

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -44,6 +44,8 @@ jobs:
             repo: registry.k8s.io
           - image: tooljet/tooljet-ce
             repo: docker.io
+          - image: postgres
+            repo: docker.io
 
     permissions:
       packages: write
