--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -70,6 +70,8 @@ jobs:
             repo: gcr.io
           - image: google-samples/microservices-demo/paymentservice
             repo: gcr.io
+          - image: ghcr.io/koolay/images-mirror/google-samples/microservices-demo/redis
+            repo: gcr.io
 
     permissions:
       packages: write
