--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -60,6 +60,22 @@ jobs:
             repo: docker.io
           - image: bitnami/minio
             repo: docker.io
+          - image: plane/plane
+            repo: docker.io
+          - image: plane/plane-frontend
+            repo: docker.io
+          - image: plane/plane-backend
+            repo: docker.io
+          - image: plane/plane-worker
+            repo: docker.io
+          - image: plane/plane-admin
+            repo: docker.io
+          - image: plane/plane-proxy
+            repo: docker.io
+          - image: plane/plane-deploy
+            repo: docker.io
+          - image: plane/plane-space
+            repo: docker.io
             
     permissions:
       packages: write
