--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -62,6 +62,8 @@ jobs:
             repo: docker.io
           - image: bitnami/postgresql
             repo: docker.io
+          - image: bitnami/keycloak
+            repo: docker.io
           - image: makeplane/plane
             repo: docker.io
           - image: makeplane/plane-frontend
