--- a/image-list.yaml
+++ b/image-list.yaml
@@ -1,5 +1,5 @@
 ---
 docker.io/gitea/gitea:1.22.3: ghcr.io/koolay/gitea/gitea:1.22.3
-docker.io/library/scratch:latest: ghcr.io/koolay/scratch:latest
-docker.io/library/alpine:3.18.0: ghcr.io/koolay/alpine:3.18.0
-docker.io/library/golang:1.23.1: ghcr.io/koolay/golang:1.23.1
+docker.io/library/scratch:latest: ghcr.io/koolay/library/scratch:latest
+docker.io/library/alpine:3.18.0: ghcr.io/koolay/library/alpine:3.18.0
+docker.io/library/golang:1.23.1: ghcr.io/koolay/library/golang:1.23.1
