--- a/image-list.yaml
+++ b/image-list.yaml
@@ -10,5 +10,7 @@ docker.io/library/redis:7.4.1: ghcr.io/koolay/library/redis:7.4.1
 docker.io/penpotapp/backend:2.3.3: ghcr.io/koolay/penpotapp/backend:2.3.3
 docker.io/penpotapp/frontend:2.3.3: ghcr.io/koolay/penpotapp/frontend:2.3.3
 docker.io/penpotapp/exporter:2.3.3: ghcr.io/koolay/penpotapp/exporter:2.3.3
+docker.io/bitnami/redis:7.2.5-debian-12-r0: ghcr.io/koolay/bitnami/redis:7.2.5-debian-12-r0
+docker.io/bitnami/postgresql:16.3.0-debian-12-r15: ghcr.io/koolay/bitnami/postgresql:16.3.0-debian-12-r15
 
 
