--- a/image-list.yaml
+++ b/image-list.yaml
@@ -18,3 +18,5 @@ docker.io/nicolaka/netshoot:v0.13: ghcr.io/koolay/nicolaka/netshoot:v0.13
 docker.io/josepdcs/kubectl-prof:1.5.0-jvm-alpine: ghcr.io/koolay/josepdcs/kubectl-prof:1.5.0-jvm-alpine
 docker.io/josepdcs/kubectl-prof:1.5.0-jvm: ghcr.io/koolay/josepdcs/kubectl-prof:1.5.0-jvm
 docker.io/otel/opentelemetry-collector-contrib:0.109.0: ghcr.io/koolay/otel/opentelemetry-collector-contrib:0.109.0
+docker.io/kestra/kestra:v0.23.4: ghcr.io/koolay/kestra/kestra:v0.23.4
+docker.io/bitnami/minio:2024.12.18-debian-12-r1: ghcr.io/koolay/bitnami/minio:2024.12.18-debian-12-r1
