--- a/image-list.yaml
+++ b/image-list.yaml
@@ -21,3 +21,4 @@ docker.io/otel/opentelemetry-collector-contrib:0.109.0: ghcr.io/koolay/otel/open
 docker.io/kestra/kestra:v0.23.4: ghcr.io/koolay/kestra/kestra:v0.23.4
 docker.io/bitnami/minio:2024.12.18-debian-12-r1: ghcr.io/koolay/bitnami/minio:2024.12.18-debian-12-r1
 docker.io/bitnami/kafka:3.8.1-debian-12-r0: ghcr.io/koolay/bitnami/kafka:3.8.1-debian-12-r0
+docker.io/openproject/openproject:16: ghcr.io/koolay/openproject/openproject:16
